--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Epilogue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,5 +7,13 @@ body,
 html {
   padding: 0;
   margin: 0;
-  font-family: "Epilogue", sans-serif;
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  background: linear-gradient(
+    180.63deg,
+    rgba(253, 164, 6, 1) -61.24%,
+    #15202b 32.5%
+  );
 }
